// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "record(2)",
        "root": "record(1)",
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 2,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 3,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 2`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "record(1)",
        "root": "record(1)",
      },
      "text": "hear that",
    },
    "replyCount": 1,
    "repostCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bobby boy here",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bob back at it again!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(3)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 3`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "dan.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "repost": "record(1)",
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Array [
            0,
            18,
          ],
          "type": "mention",
          "value": "user(2)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "repostedBy": Object {
      "did": "user(1)",
      "name": "carol.test",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "name": "carol.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "record(3)",
        "root": "record(3)",
      },
      "text": "of course",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "name": "carol.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 4`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 3,
    "myState": Object {
      "like": "record(2)",
      "repost": "record(1)",
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "repostedBy": Object {
      "did": "user(1)",
      "name": "dan.test",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "name": "dan.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Array [
            0,
            18,
          ],
          "type": "mention",
          "value": "user(0)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "name": "dan.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "dan here!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views reflects fetching user's state in the feed. 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "record(2)",
        "root": "record(1)",
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 2,
    "myState": Object {
      "like": "record(4)",
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 3,
    "myState": Object {
      "like": "record(5)",
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {},
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(6)",
  },
]
`;
